@@ -6,9 +6,11 @@ import org.springframework.boot.test.web.server.LocalServerPort;
 import org.springframework.context.annotation.Import;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.web.client.RestClient;
+import org.springframework.web.client.RestClientResponseException;
 import xyz.stasiak.recipai.TestcontainersConfiguration;
 
 import java.util.List;
+import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -26,8 +28,8 @@ class RecipeIntegrationTest {
     }
 
     @Test
-    void shouldCreateListAndReadRecipes() {
-        // Create first recipe
+    void shouldCreateReadUpdateDeleteRecipes() {
+        // CREATE: Create first recipe
         RecipeData pizzaData = new RecipeData(
                 List.of(
                         new Ingredient("flour", "300g", null),
@@ -51,7 +53,7 @@ class RecipeIntegrationTest {
         assertThat(pizzaResponse).isNotNull();
         assertThat(pizzaResponse.name()).isEqualTo("Pizza Margherita");
 
-        // Create second recipe
+        // CREATE: Create second recipe
         RecipeData pastaData = new RecipeData(
                 List.of(
                         new Ingredient("spaghetti", "400g", null),
@@ -75,7 +77,7 @@ class RecipeIntegrationTest {
         assertThat(pastaResponse).isNotNull();
         assertThat(pastaResponse.name()).isEqualTo("Spaghetti Carbonara");
 
-        // List all recipes - check that our created recipes are present (independent of existing data)
+        // READ: List all recipes - check that our created recipes are present
         List<RecipeListDto> listResponse = restClient()
                 .get()
                 .uri("/recipes")
@@ -91,18 +93,133 @@ class RecipeIntegrationTest {
                 .extracting(RecipeListDto::name)
                 .contains("Pizza Margherita", "Spaghetti Carbonara");
 
-        // Read detailed recipe
-        String pizzaId = pizzaResponse.id().toString();
+        // READ: Get detailed recipe
         RecipeDto detailedRecipe = restClient()
                 .get()
-                .uri("/recipes/" + pizzaId)
+                .uri("/recipes/" + pizzaResponse.id())
                 .retrieve()
                 .body(RecipeDto.class);
         assertThat(detailedRecipe).isNotNull();
         assertThat(detailedRecipe.name()).isEqualTo("Pizza Margherita");
         assertThat(detailedRecipe.data().ingredients()).hasSize(3);
         assertThat(detailedRecipe.data().instructions()).hasSize(3);
-        assertThat(detailedRecipe.data().ingredients().get(0).name()).isEqualTo("flour");
-        assertThat(detailedRecipe.data().instructions().get(0).step()).isEqualTo("Make dough");
+        assertThat(detailedRecipe.data().ingredients().getFirst().name()).isEqualTo("flour");
+        assertThat(detailedRecipe.data().instructions().getFirst().step()).isEqualTo("Make dough");
+
+        // UPDATE: Update the pizza recipe
+        RecipeData updatedPizzaData = new RecipeData(
+                List.of(
+                        new Ingredient("flour", "400g", null),
+                        new Ingredient("cheese", "200g", null),
+                        new Ingredient("tomatoes", "300g", null)
+                ),
+                List.of(
+                        new Instruction("Make better dough"),
+                        new Instruction("Add cheese and tomatoes"),
+                        new Instruction("Bake for 20 minutes")
+                )
+        );
+        UpdateRecipeRequest updateRequest = new UpdateRecipeRequest("Updated Pizza Margherita", updatedPizzaData);
+
+        RecipeDto updatedRecipe = restClient()
+                .put()
+                .uri("/recipes/" + pizzaResponse.id())
+                .body(updateRequest)
+                .retrieve()
+                .body(RecipeDto.class);
+
+        assertThat(updatedRecipe).isNotNull();
+        assertThat(updatedRecipe.id()).isEqualTo(pizzaResponse.id());
+        assertThat(updatedRecipe.name()).isEqualTo("Updated Pizza Margherita");
+        assertThat(updatedRecipe.data().ingredients()).hasSize(3);
+        assertThat(updatedRecipe.data().instructions()).hasSize(3);
+        assertThat(updatedRecipe.data().ingredients().getFirst().quantity()).isEqualTo("400g");
+
+        // READ: Verify GET shows updated data
+        RecipeDto fetchedUpdatedRecipe = restClient()
+                .get()
+                .uri("/recipes/" + pizzaResponse.id())
+                .retrieve()
+                .body(RecipeDto.class);
+        assertThat(fetchedUpdatedRecipe).isNotNull();
+        assertThat(fetchedUpdatedRecipe.name()).isEqualTo("Updated Pizza Margherita");
+        assertThat(fetchedUpdatedRecipe.data().ingredients()).hasSize(3);
+
+        // DELETE: Delete the pasta recipe
+        restClient()
+                .delete()
+                .uri("/recipes/" + pastaResponse.id())
+                .retrieve()
+                .toBodilessEntity();
+
+        // READ: Verify deleted recipe returns 404
+        try {
+            restClient()
+                    .get()
+                    .uri("/recipes/" + pastaResponse.id())
+                    .retrieve()
+                    .body(RecipeDto.class);
+            // Should not reach here
+            assertThat(false).isTrue();
+        } catch (RestClientResponseException ex) {
+            assertThat(ex.getStatusCode().value()).isEqualTo(404);
+        }
+
+        // READ: Verify updated recipe still exists in list
+        List<RecipeListDto> finalListResponse = restClient()
+                .get()
+                .uri("/recipes")
+                .retrieve()
+                .body(new ParameterizedTypeReference<>() {
+                });
+
+        assertThat(finalListResponse)
+                .extracting(RecipeListDto::id)
+                .contains(pizzaResponse.id())
+                .doesNotContain(pastaResponse.id());
+        assertThat(finalListResponse)
+                .extracting(RecipeListDto::name)
+                .contains("Updated Pizza Margherita")
+                .doesNotContain("Spaghetti Carbonara");
+    }
+
+    @Test
+    void shouldReturn404WhenUpdatingNonExistentRecipe() {
+        RecipeData data = new RecipeData(
+                List.of(new Ingredient("flour", "300g", null)),
+                List.of(new Instruction("Make dough"))
+        );
+        UpdateRecipeRequest updateRequest = new UpdateRecipeRequest("Non-existent", data);
+        UUID randomId = UUID.randomUUID();
+
+        try {
+            restClient()
+                    .put()
+                    .uri("/recipes/" + randomId)
+                    .body(updateRequest)
+                    .retrieve()
+                    .body(RecipeDto.class);
+            // Should not reach here
+            assertThat(false).isTrue();
+        } catch (RestClientResponseException ex) {
+            assertThat(ex.getStatusCode().value()).isEqualTo(404);
+        }
+    }
+
+    @Test
+    void shouldReturn404WhenDeletingNonExistentRecipe() {
+        UUID randomId = UUID.randomUUID();
+
+        try {
+            restClient()
+                    .delete()
+                    .uri("/recipes/" + randomId)
+                    .retrieve()
+                    .toBodilessEntity();
+            // Should not reach here
+            assertThat(false).isTrue();
+        } catch (RestClientResponseException ex) {
+            assertThat(ex.getStatusCode().value()).isEqualTo(404);
+        }
     }
 }
